---
source: crates/math-core/tests/error_test.rs
expression: "\\cramped[\\scriptstyle\\scriptstyle]{x}"
---
Error: Expected at most one token as argument.
   ╭─[ <input>:1:22 ]
   │
 1 │ \cramped[\scriptstyle\scriptstyle]{x}
   │                      ──────┬─────  
   │                            ╰─────── expected at most one token here
───╯
